--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Covid-19</title>
     <!-- bootstarp link -->
-    <link rel="stylesheet" href="/bootstrub/bootstrap.min.css">
+    <link rel="stylesheet" href="./bootstrub/bootstrap.min.css">
     <!-- Extranal css -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 
     <script src="https://kit.fontawesome.com/f9bdb0c80c.js" crossorigin="anonymous"></script>
 
