--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./bootstrub/bootstrap.min.css">
     <!-- Extranal css -->
     <link rel="stylesheet" href="./css/main.css">
-
+    <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/f9bdb0c80c.js" crossorigin="anonymous"></script>
 
 
@@ -47,11 +47,8 @@
                             <a class="nav-link " href="#Prevension" tabindex="-1" aria-disabled="true">Prevension </a>
                         </li>
 
-                        <button type="button" class="btn btn-outline-danger  rounded-pill ps-5 pe-5">Primary</button>
-
-
+                        <button type="button" class="btn btn-outline-danger  rounded-pill ps-5 pe-5">Contact</button>
                     </ul>
-
                 </div>
             </div>
         </nav>
@@ -72,8 +69,6 @@
                             <button type="button" class="btn btn-outline-danger  rounded-pill ps-5 pe-5">Let Us
                                 Help</button>
                         </div>
-
-
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 order-first order-md-last">
                         <img class="img-fluid p-5" src="./images/Illustration 01.png" alt="">
@@ -101,10 +96,7 @@
                             <button type="button" class="btn btn-outline-danger  rounded-pill ps-5 pe-5">Learn
                                 More</button>
                         </div>
-
-
                     </div>
-
                 </div>
             </div>
 
@@ -120,10 +112,10 @@
                     </div>
                 </div>
 
-                <div class="row row-cols-1 row-cols-md-3 g-4  mt-3">
-                    <div class="col">
-                        <div class="card h-100 shadow-lg border-0 rounded-3">
-                            <img src="./images/card3.png" class="card-img-top" alt="...">
+                <div class="row row-cols-1 row-cols-md-3 g-4  mt-3 ">
+                    <div class="col ">
+                        <div class="card h-100 shadow-lg border-0 rounded-3  ">
+                            <img src="./images/card3.png" class="card-img-top mx-auto d-block" alt="...">
                             <div class="card-body text-center text-wrap">
                                 <h5 class="card-title">Air Transmission </h5>
                                 <p class="card-text "> Gavi, the Vaccine Alliance, supports vaccines against 17
@@ -133,8 +125,8 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card h-100 shadow-lg border-0 rounded-3 ">
-                            <img src="./images/card2.png" class="card-img-top " alt="...">
+                        <div class="card h-100 shadow-lg border-0 rounded-3  ">
+                            <img src="./images/card2.png" class="card-img-top  mx-auto d-block" alt="...">
                             <div class="card-body text-center text-wrap">
                                 <h5 class="card-title">Human Contacts</h5>
                                 <p class="card-text">Washing your hands is one of thesimplest ways you can protect</p>
@@ -144,7 +136,7 @@
                     <div class="col">
                         <div class="card h-100 border-0 shadow-lg rounded-3 ">
 
-                            <img src="./images/card1.png" class="card-img-top" alt="...">
+                            <img src="./images/card1.png" class="card-img-top mx-auto d-block" alt="...">
 
                             <div class="card-body text-center text-wrap">
                                 <h5 class="card-title">Containted Objects</h5>
